# 100-exercises-to-learn-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  dprint.json  flake.nix  progress.md
.github/workflows/: ci.yml  update.yml
book/: book.toml  custom.theme  link2alias.json  metadata.yml
book/src/: SUMMARY.md  going_further.md
book/src/01_intro/: 00_welcome.md  01_syntax.md
book/src/02_basic_calculator/: 00_intro.md  01_integers.md  02_variables.md  03_if_else.md  04_panics.md  05_factorial.md  06_while.md  07_for.md  08_overflow.md  09_saturating.md  10_as_casting.md
book/src/03_ticket_v1/: 00_intro.md  01_struct.md  02_validation.md  03_modules.md  04_visibility.md  05_encapsulation.md  06_ownership.md  07_setters.md  08_stack.md  09_heap.md  10_references_in_memory.md  11_destructor.md  12_outro.md
book/src/04_traits/: 00_intro.md  01_trait.md  02_orphan_rule.md  03_operator_overloading.md  04_derive.md  05_str_slice.md  05_trait_bounds.md  06_str_slice.md  07_deref.md  07_sized.md  08_from.md  08_sized.md  09_assoc_vs_generic.md  09_from.md  10_assoc_vs_generic.md  10_clone.md  11_clone.md  11_copy.md  12_copy.md  12_drop.md  13_drop.md  14_outro.md
book/src/05_ticket_v2/: 00_intro.md  01_enum.md  02_match.md  03_variants_with_data.md  04_if_let.md  05_nullability.md  06_fallibility.md  07_unwrap.md  08_error_enums.md  09_error_trait.md  10_packages.md  11_dependencies.md  12_thiserror.md  13_try_from.md  14_source.md  15_outro.md
book/src/06_ticket_management/: 00_intro.md  01_arrays.md  02_vec.md  03_resizing.md  04_iterators.md  05_iter.md  06_lifetimes.md  07_combinators.md  08_impl_trait.md  09_impl_trait_2.md  10_slices.md  11_mutable_slices.md  12_two_states.md  13_index.md  14_index_mut.md  15_hashmap.md  16_btreemap.md
book/src/07_threads/: 00_intro.md  01_threads.md  02_static.md  03_leak.md  04_scoped_threads.md  05_channels.md  06_interior_mutability.md  07_ack.md  08_client.md  09_bounded.md  10_patch.md  11_locks.md  12_rw_lock.md  13_without_channels.md  14_sync.md
book/src/08_futures/: 00_intro.md  01_async_fn.md  02_spawn.md  03_runtime.md  04_future.md  05_blocking.md  06_async_aware_primitives.md  07_cancellation.md  08_outro.md
book/theme/css/: general.css  print.css
exercises/: track
exercises/01_intro/00_welcome/: Cargo.toml
exercises/01_intro/01_syntax/: Cargo.toml
exercises/02_basic_calculator/00_intro/: Cargo.toml
exercises/02_basic_calculator/01_integers/: Cargo.toml
exercises/02_basic_calculator/02_variables/: Cargo.toml
helpers/: json2redirects.sh
helpers/common/: Cargo.toml
helpers/mdbook-exercise-linker/: Cargo.toml
helpers/mdbook-link-shortener/: Cargo.toml
helpers/mdbook-link-shortener/src/: lib.rs  main.rs
helpers/ticket_fields/: Cargo.toml
site/: _redirects  redirects
(+232 files in other folders)
