[workspace]
members = [
  "exercises/*/*",
  "helpers/common",
  "helpers/mdbook-exercise-linker",
  "helpers/mdbook-link-shortener",
  "helpers/ticket_fields",
]
resolver = "2"

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.

# This is needed to guarantee the expected behaviour on that specific exercise,
# regardless of the "global" setting for `overflow-checks` on the `dev` profile.
[profile.dev.package.copy]
overflow-checks = true
